--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "immer": "^10.0.3",
     "leaflet": "^1.9.4",
-    "next": "13.4.4",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
-    "typescript": "5.0.4"
+    "scheduler": "^0.23.0",
+    "typescript": "5.0.4",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
