--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
     hostname: nextmap
     container_name: nextmap
     environment:
-    - VIRTUAL_HOST=nextmap.syntapse.co.uk
-    - LETSENCRYPT_HOST=nextmap.syntapse.co.uk
-    - LETSENCRYPT_EMAIL=laurencefass@syntapse.co.uk
+    # ${VAR_XXX} are required system env vars - add them to ~./bashrc
+    - VIRTUAL_HOST=nextmap.${LETSENCRYPT_HOST}
+    - LETSENCRYPT_HOST=nextmap.${LETSENCRYPT_HOST}
+    - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
+
     expose:
       - "3000"
     volumes:
