--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "immer": "^10.0.3",
+    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "next": "14.0.4",
     "react": "18.2.0",
@@ -25,7 +26,7 @@
     "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3",
+    "@types/leaflet": "^1.9.8",
     "@types/react-leaflet": "^3.0.0"
   }
 }
