--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,12 @@ services:
     - VIRTUAL_HOST=nextmap.${LETSENCRYPT_HOST}
     - LETSENCRYPT_HOST=nextmap.${LETSENCRYPT_HOST}
     - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
-
     expose:
       - "3000"
     volumes:
       - .:/app
+      - ../package-mono/my-react-component/dist:/app/node_modules/my-react-component/
+      - ../package-mono/my-react-component/node_modules:/app/node_modules/my-react-component/node_modules
     working_dir: /app
     # command: tail -f /dev/null
     command: "npm run dev"
