--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "immer": "^10.0.3",
@@ -26,6 +23,9 @@
     "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "@types/leaflet": "^1.9.8",
     "@types/react-leaflet": "^3.0.0"
   }
