--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/node": "^20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "@types/leaflet": "^1.9.8",
-    "@types/react-leaflet": "^3.0.0"
+    "@types/leaflet": "^1.9.8"
   }
 }
