removed reliance on monkey patched leaflet-rotate-map package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-config-next": "13.4.4",
     "immer": "^10.0.3",
     "install": "^0.13.0",
-    "leaflet": "^1.9.4",
+    "leaflet": "^1.9.3",
+    "leaflet-rotate": "^0.2.8",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
